--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
+  <title>Gemini API 테스트 (Cloudflare)</title>
   <link href='/style.css' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+  <main class="container">
+    <h1>Gemini API 테스트</h1>
+    <p class="description">이 테스트는 Cloudflare Functions를 거쳐 안전하게 Google AI Studio API를 호출합니다.</p>
+    
+    <div class="chat-container">
+      <div id="output" class="output-box">여기에 AI의 답변이 표시됩니다.</div>
+      <div class="input-area">
+        <input type="text" id="promptInput" placeholder="AI에게 물어보고 싶은 말을 입력하세요..." />
+        <button id="sendBtn">전송</button>
+      </div>
+    </div>
+  </main>
+  
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
