--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>🧶 맞춤형 뜨개질 도안 생성기</h1>
-    <p>원하는 실 굵기와 완성품 크기(cm)를 입력하면, 비율에 맞게 사진을 배치하여 도안을 만들어줍니다!</p>
+    <p>이미지를 픽셀화하여 실제 코 단위의 뜨개질 도안으로 변환해 줍니다.</p>
   </header>
 
   <main class="container">
@@ -33,32 +33,20 @@
           <option value="chunky">Chunky / Bulky (약 14코 20단)</option>
           <option value="super_bulky">Super Bulky (약 10코 14단)</option>
         </select>
-        <small>※ 10x10cm 기준 평균 게이지로 자동 계산됩니다.</small>
+        <small>※ 10x10cm 기준 평균 게이지입니다.</small>
       </div>
 
       <div class="control-group">
-        <label>3. 원하는 완성품 크기</label>
-        <div class="size-inputs">
-          <div class="input-with-hint">
+        <label>3. 원하는 편물의 가로 크기</label>
+        <div class="input-with-hint">
             <input type="number" id="targetWidth" value="50" min="10" max="300">
             <span class="hint">가로(cm)</span>
-          </div>
-          <span>x</span>
-          <div class="input-with-hint">
-            <input type="number" id="targetHeight" value="50" min="10" max="300">
-            <span class="hint">세로(cm)</span>
-          </div>
         </div>
+        <small>세로 크기(단 수)는 원본 이미지 비율에 맞춰 자동 계산됩니다.</small>
       </div>
 
       <div class="control-group">
-        <label for="bgColor">4. 여백 채우기 색상</label>
-        <input type="color" id="bgColor" value="#ffffff">
-        <small>사진 비율이 편물과 다를 때 빈 공간을 채울 색상입니다.</small>
-      </div>
-
-      <div class="control-group">
-        <label for="colorCount">5. 최대 색상 수</label>
+        <label for="colorCount">4. 최대 색상 수</label>
         <div class="input-with-hint">
           <input type="number" id="colorCount" value="15" min="2" max="40">
           <span class="hint">색</span>
