--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
           <input type="number" id="colorCount" value="15" min="2" max="40">
           <span class="hint">색</span>
         </div>
-        <small>가장 눈에 띄는(채도가 높고 중앙에 있는) 색상 우선 보존.</small>
+        <small>선택한 필수 색상을 포함하여 총 사용할 색상 수입니다.</small>
+      </div>
+
+      <div class="control-group">
+        <label>6. 필수 보존 색상 (선택사항)</label>
+        <small>오른쪽 원본 이미지에서 <b>살리고 싶은 중요한 색상</b>(눈동자, 옷 등)을 <b>클릭</b>하면 고정 색상으로 등록됩니다.</small>
+        <ul id="seedColorList" class="color-list" style="margin-top: 0.5rem; min-height: 28px;">
+          <!-- 클릭한 색상이 여기에 표시됨 -->
+        </ul>
+        <button id="clearSeedsBtn" class="secondary-btn" style="font-size: 0.8rem; padding: 0.4rem; margin-top: 0; display: none;">선택 초기화</button>
       </div>
 
       <div class="control-group checkbox-group">
