feat: add magnifying glass tool for precise seed color picking

--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
         <div class="history-thumbnails" id="historyThumbnails"></div>
       </div>
 
-      <div class="canvas-wrapper">
+      <div class="canvas-wrapper" style="position: relative;">
         <canvas id="patternCanvas"></canvas>
+        <canvas id="magnifierCanvas" class="magnifier-canvas"></canvas>
       </div>
       
       <div class="legend-panel">
