--- a/index.html
+++ b/index.html
@@ -23,29 +23,30 @@
       </div>
     </section>
 
-    <!-- 2단계: 원본 이미지 미리보기 및 필수 색상 선택 (이미지 업로드 시 나타남) -->
-    <section id="previewArea" class="step-section preview-section" style="display: none;">
+    <!-- 2단계: 원본 이미지 미리보기 및 필수 색상 선택 -->
+    <section id="previewArea" class="step-section preview-section">
       <div class="section-title">
         <h2>2. 원본 이미지 확인 및 필수 색상 선택</h2>
-        <p class="instruction">사진에서 <b>살리고 싶은 중요한 색상</b>(눈동자, 옷 등)을 <b>클릭(모바일은 꾹 누르기)</b>하여 선택하세요.</p>
+        <p class="instruction">이미지를 업로드하면 여기에 나타납니다. 사진에서 <b>살리고 싶은 중요한 색상</b>을 선택하세요.</p>
       </div>
       
       <div class="canvas-wrapper original-wrapper">
-        <canvas id="previewCanvas"></canvas>
+        <div id="uploadPlaceholder" class="placeholder-msg">이미지를 업로드해주세요.</div>
+        <canvas id="previewCanvas" style="display: none;"></canvas>
         <canvas id="magnifierCanvas" class="magnifier-canvas"></canvas>
       </div>
 
       <div class="seed-colors-area">
         <h3>선택된 필수 색상</h3>
         <ul id="seedColorList" class="color-list">
-          <!-- 선택한 색상이 여기에 추가됨 -->
+          <li class="empty-msg">아직 선택된 색상이 없습니다.</li>
         </ul>
-        <button id="clearSeedsBtn" class="secondary-btn small-btn">선택 초기화</button>
+        <button id="clearSeedsBtn" class="secondary-btn small-btn" style="display: none;">선택 초기화</button>
       </div>
     </section>
 
     <!-- 3단계: 세부 설정 -->
-    <section id="settingsArea" class="step-section settings-section" style="display: none;">
+    <section id="settingsArea" class="step-section settings-section">
       <div class="section-title">
         <h2>3. 도안 세부 설정</h2>
       </div>
@@ -98,14 +99,14 @@
         <div class="generator-hint">
           💡 버튼을 다시 누를 때마다 조금씩 다른 도안이 생성됩니다.
         </div>
-        <button id="generateBtn" class="primary-btn">도안 생성하기</button>
+        <button id="generateBtn" class="primary-btn" disabled>도안 생성하기</button>
         <button id="downloadPdfBtn" class="secondary-btn" disabled>PDF 다운로드</button>
         <div id="statusMessage" class="status-msg"></div>
       </div>
     </section>
 
-    <!-- 4단계: 결과 도안 (생성 시 나타남) -->
-    <section id="resultPanel" class="step-section result-panel" style="display: none;">
+    <!-- 4단계: 결과 도안 -->
+    <section id="resultPanel" class="step-section result-panel">
       <div class="section-title">
         <h2>4. 생성된 도안</h2>
       </div>
@@ -117,14 +118,14 @@
       </div>
 
       <div class="canvas-wrapper pattern-wrapper">
-        <canvas id="patternCanvas"></canvas>
+        <div id="resultPlaceholder" class="placeholder-msg">도안을 생성하면 여기에 표시됩니다.</div>
+        <canvas id="patternCanvas" style="display: none;"></canvas>
       </div>
       
       <div class="legend-panel">
         <h3>사용된 색상표 (실 번호)</h3>
         <p id="patternInfo" class="pattern-info-text"></p>
         <ul id="colorLegend" class="color-list">
-          <!-- 색상 목록이 동적으로 추가됨 -->
         </ul>
       </div>
     </section>
