style: overhaul UI to a sophisticated Black & White 'hip' theme for SSUESSUE KNITS

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>뜨개질 도안 생성기 (Knit Pattern Generator)</title>
+  <title>SSUESSUE KNITS | 쓔쓔닛츠</title>
   <link href='/style.css' rel='stylesheet'>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
   <header>
-    <h1>🧶 맞춤형 뜨개질 도안 생성기</h1>
-    <p>이미지를 픽셀화하여 실제 코 단위의 뜨개질 도안으로 변환해 줍니다.</p>
+    <div class="brand">SSUESSUE KNITS</div>
+    <div class="brand-kr">쓔쓔닛츠</div>
+    <p class="tagline">Crafting your pixels into knit patterns.</p>
   </header>
 
   <main class="container">
