style: unify UI card style, update settings grid layout, and refine branding typography

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SSUESSUE KNITS | 쓔쓔닛츠</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff">
+  <link rel="stylesheet" href="https://webfontworld.github.io/gmarket/GmarketSans.css">
   <link href='/style.css' rel='stylesheet'>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
