feat: add file size limit, canvas safety, dark mode and mobile magnifier improvements

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <section class="step-section upload-section">
       <div class="control-group">
         <label for="imageUpload" class="main-label" data-i18n="upload_label">1. 도안으로 만들 이미지를 업로드하세요</label>
+        <div class="input-desc">JPG, PNG (Max 10MB)</div>
         <input type="file" id="imageUpload" accept="image/jpeg, image/png">
       </div>
     </section>
